Bug 1604048 - Make Wayland DnD behaviour closer match X11's - part 1, r=stransky

- Properly initialize `mSelectedDragAction` of data_offers so `GetSelectedDragAction()`
   does not return random values.
 - Emit a motion event on `data_offer_action`, just like GTK does, to chain up to
   `nsDragService::UpdateDragAction()`
 - Only advertise possible actions if we actually accept them.
 - Rename some things to make them easier to understand

Differential Revision: https://phabricator.services.mozilla.com/D60853